# platform.adaptation.tw1.sensor-hal-tw1

./: CMakeLists.txt  project.config  sensor.xml.in  sensors.xml.in
packaging/: 99-sensorhub.rules  sensor-hal-tw1.spec
src/: create.cpp  macro.h  sensor_common.h  sensor_config.cpp  sensor_config.h  sensor_log.h  util.cpp  util.h
src/accel/: accel_device.cpp  accel_device.h
src/geomag/: geomag_device.cpp  geomag_device.h
src/gyro/: gyro_device.cpp  gyro_device.h
src/gyro_uncal/: gyro_uncal_device.cpp  gyro_uncal_device.h
src/hrm/: hrm_device.cpp  hrm_device.h
src/hrm_raw/: hrm_raw_data_reader.cpp  hrm_raw_data_reader.h  hrm_raw_data_reader_adi.cpp  hrm_raw_data_reader_adi.h  hrm_raw_data_reader_standard.cpp  hrm_raw_data_reader_standard.h  hrm_raw_device.cpp  hrm_raw_device.h
src/light/: light_device.cpp  light_device.h
src/pressure/: pressure_device.cpp  pressure_device.h
src/proxi/: proxi_device.cpp  proxi_device.h
